rush-var/tests/snapshots/lexer__colon_equals.snap
---
source: rush-var/tests/lexer.rs
expression: body
---
input: ${name:=val}
Dollar       @0..1
LBrace       @1..2
Ident        @2..6 "name"
Colon        @6..7
Equals       @7..8
Ident        @8..11 "val"
RBrace       @11..12
