rush-var/tests/snapshots/lexer__colon_minus.snap
---
source: rush-var/tests/lexer.rs
expression: body
---
input: ${name:-def}
Dollar       @0..1
LBrace       @1..2
Ident        @2..6 "name"
Colon        @6..7
Minus        @7..8
Ident        @8..11 "def"
RBrace       @11..12
